--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "facebook-tracking-exposed",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "facebook.tracking.exposed → collaborative tool to investigate personalization algorithms",
-  "main": "app.js",
   "scripts": {
-    "collector": "DEBUG=routes:*,lib:*,fbtrex:* nodemon bin/collector",
+    "collector": "DEBUG=routes:*,lib:*,fbtrex:* nodemon --config config/nodemon.json bin/collector",
     "collector:prod": "DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read node bin/collector",
-    "content": "DEBUG=lib:*,fbtrex:*,routes:* nodemon bin/content",
+    "content": "DEBUG=lib:*,fbtrex:*,routes:* nodemon --config config/nodemon.json bin/content",
     "content:prod": "DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read node bin/content",
     "build": "bin/install-script.sh",
     "parserv": "DEBUG=*,-lib:parse,-lib:mongo:read node bin/parserv.js",
-    "semanticserv": "DEBUG=*,-lib:parse,-lib:mongo:read node bin/semanticserv.js"
+    "semanticserv": "DEBUG=*,-lib:mongo:read node bin/semanticserv.js",
+    "buildrsserv": "DEBUG=*,-lib:mongo:read node bin/buildrsserv.js"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
   "license": "AGPL-3.0",
@@ -38,9 +38,10 @@
     "node-geoip": "^1.0.1",
     "pug": "^2.0.0-beta11",
     "request": "^2.88.0",
+    "reveal.js": "^3.7.0",
+    "rss": "^1.2.2",
     "tweetnacl": "^0.14.5",
-    "tweetnacl-util": "^0.15.0",
-    "reveal.js": "^3.7.0"
+    "tweetnacl-util": "^0.15.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
