--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "content": "DEBUG=lib:*,fbtrex:*,routes:* nodemon bin/content.js --config config/nodemon.json",
     "content:prod": "DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read node bin/content",
     "build": "bin/install-script.sh",
-    "parserv": "DEBUG=*,-lib:parse,-lib:mongo:read node bin/parserv.js",
-    "semanticserv": "DEBUG=*,-lib:mongo:read node bin/semanticserv.js",
-    "buildrsserv": "DEBUG=*,-lib:mongo:read node bin/buildrsserv.js",
+    "parserv": "DEBUG=*,-lib:parse,-lib:mongo:* node bin/parserv.js",
+    "semanticserv": "DEBUG=*,-lib:mongo:* node bin/semanticserv.js",
+    "buildrsserv": "DEBUG=*,-lib:mongo:* node bin/buildrsserv.js",
     "test": "./node_modules/.bin/mocha"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
