implemented csv importer tool and update writeMany to the mongo 3.x

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "food-words": "^1.1.0",
     "harmony-reflect": "^1.6.1",
     "jquery": "^3.0.0",
+    "json-2-csv": "^3.5.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongodb": "^3.2.3",
-    "mongoose": "^5.5.0",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-geoip": "^1.0.1",
