--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "harmony-reflect": "^1.6.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "mongodb": "^2.1.8",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-geoip": "^1.0.1",
@@ -37,7 +36,9 @@
     "reveal.js": "^3.7.0",
     "rss": "^1.2.2",
     "tweetnacl": "^0.14.5",
-    "tweetnacl-util": "^0.15.0"
+    "tweetnacl-util": "^0.15.0",
+    "mongodb2": "npm:mongodb@^2.1.8",
+    "mongodb3": "npm:mongodb@3.2.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
