restored stats with new db and config logic -finally-

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "collector:watch": "key=fuffa elastic=disabled DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read nodemon bin/collector.js",
     "content:prod": "FBTREX=production DEBUG=fbtrex:*,routes:* node bin/content",
     "content:watch": "key=fuffa elastic=disabled DEBUG=lib:*,fbtrex:*,routes:* nodemon bin/content.js --config config/nodemon.json",
-    "parserv": "elastic=disabled DEBUG=*,-lib:parse,-lib:mongo:* node bin/parserv.js",
+    "parserv": "elastic=disabled DEBUG=*,-lib:aggregated,-lib:parse,-lib:mongo:* node bin/parserv.js",
     "semanticserv": "elastic=disabled DEBUG=*,-lib:mongo*,-lib:semantic:v node bin/semanticserv.js",
     "test": "./node_modules/.bin/mocha"
   },
