--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "content:watch": "DEBUG=lib:*,fbtrex:*,routes:* nodemon bin/content.js --config config/nodemon.json",
     "content:prod": "FBTREX=production DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read node bin/content",
     "build": "bin/install-script.sh",
-    "parserv": "DEBUG=*,-lib:parse,-lib:mongo:* node bin/parserv.js",
+    "parserv": "DEBUG=*,-lib:parse,-lib:mongo*,-parsers:utils:* node bin/parserv.js",
     "semanticserv": "DEBUG=*,-lib:mongo*,-lib:semantic:v node bin/semanticserv.js",
     "test": "./node_modules/.bin/mocha"
   },
