--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.0",
   "description": "facebook.tracking.exposed → collaborative tool to investigate personalization algorithms",
   "scripts": {
-    "collector:prod": "FBTREX=production DEBUG=fbtrex:*,routes:* node bin/collector",
+    "collector:prod": "FBTREX=production elastic=disabled DEBUG=fbtrex:*,routes:* node bin/collector",
     "collector:watch": "key=fuffa elastic=disabled DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read nodemon bin/collector.js",
-    "content:prod": "FBTREX=production DEBUG=fbtrex:*,routes:* node bin/content",
+    "content:prod": "FBTREX=production elastic=disabled DEBUG=fbtrex:*,routes:* node bin/content",
     "content:watch": "key=fuffa elastic=disabled DEBUG=lib:*,fbtrex:*,routes:* nodemon bin/content.js --config config/nodemon.json",
     "parserv": "elastic=disabled DEBUG=*,-lib:aggregated,-lib:parse,-lib:mongo:* node bin/parserv.js",
     "semanticserv": "elastic=disabled DEBUG=*,-lib:mongo*,-lib:semantic:v node bin/semanticserv.js",
