--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@postlight/mercury-parser": "^2.2.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.18.3",
     "bootstrap": ">=4.3.1",
@@ -26,9 +27,12 @@
     "elasticsearch": "^15.2.0",
     "express": "^4.16.3",
     "food-words": "^1.1.0",
+    "freeze-dry": "^0.2.4",
     "harmony-reflect": "^1.6.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "mongodb2": "npm:mongodb@^2.1.8",
+    "mongodb3": "npm:mongodb@3.2.3",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-geoip": "^1.0.1",
@@ -36,9 +40,7 @@
     "reveal.js": "^3.7.0",
     "rss": "^1.2.2",
     "tweetnacl": "^0.14.5",
-    "tweetnacl-util": "^0.15.0",
-    "mongodb2": "npm:mongodb@^2.1.8",
-    "mongodb3": "npm:mongodb@3.2.3"
+    "tweetnacl-util": "^0.15.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
