removed elasticsearch as never really integrated

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "2.0.1",
   "description": "facebook.tracking.exposed → collaborative tool to investigate personalization algorithms",
   "scripts": {
-    "collector:prod": "FBTREX=production elastic=disabled DEBUG=fbtrex:*,routes:* node bin/collector",
-    "collector:watch": "key=fuffa elastic=disabled DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read nodemon bin/collector.js",
-    "content:prod": "FBTREX=production elastic=disabled DEBUG=fbtrex:*,routes:* node bin/content",
-    "content:watch": "key=fuffa elastic=disabled DEBUG=lib:*,fbtrex:*,routes:* nodemon bin/content.js --config config/nodemon.json",
-    "parserv": "elastic=disabled DEBUG=*,-lib:aggregated,-lib:parse,-lib:mongo:* node bin/parserv.js",
-    "semanticserv": "elastic=disabled DEBUG=*,-lib:mongo*,-lib:semantic:v node bin/semanticserv.js",
+    "collector:prod": "FBTREX=production DEBUG=fbtrex:*,routes:* node bin/collector",
+    "collector:watch": "key=fuffa DEBUG=lib:*,fbtrex:*,routes:*,-lib:mongo:read nodemon bin/collector.js",
+    "content:prod": "FBTREX=production DEBUG=fbtrex:*,routes:* node bin/content",
+    "content:watch": "key=fuffa DEBUG=lib:*,fbtrex:*,routes:* nodemon bin/content.js --config config/nodemon.json",
+    "parserv": "DEBUG=*,-lib:aggregated,-lib:parse,-lib:mongo:* node bin/parserv.js",
+    "semanticserv": "DEBUG=*,-lib:mongo*,-lib:semantic:v node bin/semanticserv.js",
     "test": "./node_modules/.bin/mocha"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed>, https://github.com/tracking-exposed/facebook/graphs/contributors",
@@ -24,7 +24,6 @@
     "cors": "^2.8.1",
     "d3": "^3.5.17",
     "debug": "^2.2.0",
-    "elasticsearch": "^15.2.0",
     "express": "^4.16.3",
     "food-words": "^1.1.0",
     "freeze-dry": "^0.2.4",
