--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@postlight/mercury-parser": "^2.2.0",
-    "bluebird": "^3.4.1",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.18.3",
-    "bootstrap": ">=4.3.1",
+    "bootstrap": "^4.5.3",
     "bs58": "^3.1.0",
-    "c3": "^0.4.11",
+    "c3": "^0.4.24",
     "cookie": "^0.3.1",
     "cors": "^2.8.1",
     "d3": "^3.5.17",
@@ -28,24 +28,24 @@
     "food-words": "^1.1.0",
     "freeze-dry": "^0.2.4",
     "harmony-reflect": "^1.6.1",
-    "lodash": "^4.17.19",
-    "moment": "^2.22.2",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mongodb2": "npm:mongodb@^2.1.8",
     "mongodb3": "npm:mongodb@3.2.3",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.8.4",
     "node-fetch": "^2.6.1",
     "node-geoip": "^1.0.1",
-    "request": "^2.88.0",
-    "reveal.js": "^3.7.0",
+    "request": "^2.88.2",
+    "reveal.js": "^3.9.2",
     "rss": "^1.2.2",
     "tweetnacl": "^0.14.5",
-    "tweetnacl-util": "^0.15.0"
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "jsdom": "^13.0.0",
-    "mocha": "^8.2.0",
+    "mocha": "^8.2.1",
     "nodemon": "^1.19.4"
   }
 }
